Changes to Youtube.css color scheme.

--- a/Youtube/YouTubeDraculaPrro.css
+++ b/Youtube/YouTubeDraculaPrro.css
@@ -1,7 +1,7 @@
 :root {
   --bgColor: #22212c;
-  --selectionColor: #454158;
-  --buttonColor: #7970a9;
+  --selectionColor: #7970a9;
+  --buttonColor: #454158;
   --textColor: #f8f8f2;
 }
 
